Stabilize triangulation result flow and repair planar 2D/3D boundary alignment
- migrated polygon triangulation flow to TriangulationResult(points, triangles)
- removed incorrect boundaryPoints3d payload from triangulator result
- updated planar/cylindrical/conical call sites to consume triangulation points + triangles
- changed triangle index validation to validate against projected 2D point lists
- added planar alignment helper to rebuild 3D boundary points in final triangulated 2D order
- fixed PreparedLoop construction so final projected loop cleanup stays aligned with 3D boundary points
- eliminated broad planar 2D/3D count mismatches and restored much more correct preview geometry
- kept diagnostic logging for planar bridge-size differences and #26867 investigation
- current remaining issues are localized, mainly conical hole handling and remaining geometry fidelity